# EightPuzzle-AStar-IDDFS

./: CMakeLists.txt  IDDFS_tree.drawoi  README.md  auto_build.sh  main.cpp  基于迭代加深的AStar算法求解八数码问题.docx
include/: A_star.h  cantor_expansion.h  input_processor.h  test_cases.h
src/: A_star.cpp  cantor_expansion.cpp  input_processor.cpp  test_cases.cpp
